# ShoeridingerEquationSolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/: atom_model.hpp  atom_model.ixx  base_director.hpp  base_director.ixx  gpu_engine.hpp  gpu_observables.hpp  gpu_projection.hpp  gpu_shaders.hpp  gpucheck_main.cpp  harmonic_director.hpp  harmonic_director.ixx  hydrogen_director.hpp  hydrogen_director.ixx  imgui_ui.hpp  imgui_ui.ixx  main.cpp  manifold_spec.hpp  manifold_spec.ixx  qrhi_engine.hpp  qrhicheck_main.cpp  qt_blit.hpp  render_shaders.hpp  scenario.hpp  scenario.ixx  scene_renderer.hpp  scheduler.hpp  scheduler.ixx  selftest_arcs.hpp  selftest_arcs.ixx  shell_ui.hpp  sim_director.hpp  tunneling_director.hpp  tunneling_director.ixx  vk_blobs.hpp  vk_blobs.ixx  vk_compute.hpp  vk_compute.ixx  vk_device.hpp  vk_device.ixx  vk_engine.hpp  (+9 more)
app/src/qrhi_shaders/: accum.comp  axpy.comp  blit.vert  bloom_down.comp  bloom_up.comp  bridge_load.comp  bridge_store.comp  compose.comp  conj_scale.comp  copy_state.comp  dipole.comp  dipole_kick.comp  fft_line256.comp  fft_line64.comp  fft_line8.comp  inner_product.comp  mean_force.comp  mesh.frag  mesh.vert  norm_peak.comp  occ_dilate.comp  occupancy.comp  pack_half.comp  phase_multiply.comp  project_deposit.comp  scale.comp  shadow.comp  shear.comp  synth.comp  unpack_half.comp  volume.frag  volume.vert
app/src/shaders/: accum.comp.slang  axpy.comp.slang  blit.frag.slang  blit.vert.slang  bloom_down.comp.slang  bloom_up.comp.slang  bridge_load.comp  bridge_load.comp.slang  bridge_store.comp  bridge_store.comp.slang  complex.slang  compose.comp  compose.comp.slang  conj_scale.comp.slang  copy_state.comp.slang  damp_mul.comp.slang  dipole.comp.slang  dipole_kick.comp  dipole_kick.comp.slang  fft_line256.comp.slang  fft_line64.comp.slang  fft_line8.comp.slang  flow.frag  flow.frag.slang  flow.vert  flow.vert.slang  flow_velocity.comp.slang  grid.slang  half_mul.comp.slang  inner_product.comp.slang  kin_mul.comp  kin_mul.comp.slang  mc_classify.comp  mc_classify.comp.slang  mc_density.comp  mc_density.comp.slang  mc_emit.comp  mc_emit.comp.slang  mc_scan.comp  mc_scan.comp.slang  (+31 more)
bench/: CMakeLists.txt  bench_main.cpp  gen_h2plus_atlas.cpp
core/: CMakeLists.txt
core/include/core/: camera.hpp  colormap.hpp  complex.hpp  decay.hpp  drive.hpp  emission.hpp  fft.hpp  field.hpp  flow.hpp  grid.hpp  harmonics.hpp  imaginary_time.hpp  magnetic.hpp  marching_cubes.hpp  measurement.hpp  observables.hpp  potential.hpp  projection.hpp  propagator.hpp  radial.hpp  rotation.hpp  sampling.hpp  simulation.hpp  spectral.hpp  sphere.hpp  volume.hpp  vram_budget.hpp  wavepacket.hpp
core/src/: bloch.ixx  camera.ixx  colormap.ixx  cross_section.ixx  decay.ixx  emission.ixx  flow.ixx  grid.ixx  h2plus_atlas_data.ixx  harmonics.ixx  heightfield.ixx  imaginary_time.ixx  ladder.ixx  lattice2d.ixx  marching_cubes_tables.ixx  observables.ixx  parallel.ixx  phasor.ixx  potential.ixx  spectral.ixx  spectrum1d.ixx  sphere.ixx  spheroidal.ixx  spin.ixx  spinexact.ixx  spinlattice.ixx  volume.ixx  vram_budget.ixx  wavepacket.ixx
docs/: ANGULAR_PROJECTION_SCOPING.md  ARCHITECTURE.md  GPU_PLAN.md  REVIEW_BACKLOG.md  ROADMAP.md  TDD_RULES.md
scenario/: CMakeLists.txt
scenario/src/: anderson1d_director.ixx  atom_model.ixx  base_director.ixx  billiard2d_director.ixx  bloch1d_director.ixx  bouncer1d_director.ixx  carpet1d_director.ixx  corral2d_director.ixx  doubleslit2d_director.ixx  doublewell1d_director.ixx  harmonic1d_director.ixx  harmonic_director.ixx  hydrogen_director.ixx  kepler_seed.ixx  landau2d_director.ixx  lattice2d_director.ixx  line1d_director.ixx  molecular_seed.ixx  molecule_director.ixx  morse1d_director.ixx  ptwell1d_director.ixx  qdot2d_director.ixx  qpc2d_director.ixx  rutherford3d_director.ixx  scenario.ixx  selftest_arcs.ixx  spin_director.ixx  spins_director.ixx  tunneling1d_director.ixx  tunneling_director.ixx
solver/: CMakeLists.txt
solver/shaders/: lat2d_sweep_x.comp.slang  lat2d_sweep_y.comp.slang  mc_emit.comp.slang  shear.comp.slang  spin.slang  spin_bond_gate.comp.slang  spin_cheb_first.comp.slang  spin_cheb_next.comp.slang  spin_fused_gate.comp.slang  spin_hamiltonian.comp.slang  spin_mf_snapshot.comp.slang  spin_mf_sweep.comp.slang  spin_site_gate.comp.slang
solver/src/: engine_blobs.ixx  lattice2d_engine.ixx  spin_engine.ixx  vk_engine.ixx  vkcheck_main.cpp
tests/: CMakeLists.txt  anderson1d_test.cpp  billiard2d_test.cpp  bouncer1d_test.cpp  camera_test.cpp  colormap_test.cpp  complex_test.cpp  corral2d_test.cpp  cross_section_test.cpp  decay_test.cpp  deflation_test.cpp  degenerate_guards_test.cpp  dipole_angular_test.cpp  drive_test.cpp  dynamics3_test.cpp  eigenstate_flush_test.cpp  emission_test.cpp  fft3_test.cpp  fft_test.cpp  field3_test.cpp  field_test.cpp  flow_test.cpp  grid3_test.cpp  grid_test.cpp  harmonic_dynamics_test.cpp  harmonics_test.cpp  heightfield_test.cpp  ho_spectrum_test.cpp  hydrogen3_test.cpp  imaginary_tables_test.cpp  imaginary_time_test.cpp  interference_test.cpp  ladder_test.cpp  lattice2d_test.cpp  magnetic_test.cpp  marching_cubes_test.cpp  mcwf_test.cpp  measurement_test.cpp  molecular_seed_test.cpp  molecule_test.cpp  (+26 more)
tools/cmake/: bin2h.cmake
viz/shaders/: occupancy.comp.slang  volume.frag.slang
viz/src/: vk_render.ixx
